tests/e2e/semantics/service_output_unique.story
my_service command
    my_service2 command
        a = 0
